--- a/Notebook 3 - Iteration and control flow.ipynb
+++ b/Notebook 3 - Iteration and control flow.ipynb
@@ -568,11 +568,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "997ff4d3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "done = False\n",
+    "i = 1\n",
+    "\n",
+    "while not done: # not negates done, if done is true, then not done is false, and vice versa.\n",
+    "    i += 1\n",
+    "    done = i > 5\n",
+    "\n",
+    "print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
