--- a/Notebook 3 - Iteration and control flow.ipynb
+++ b/Notebook 3 - Iteration and control flow.ipynb
@@ -601,12 +601,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "938b12fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59049"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# largest power of 3 less than 10,000 -- failed\n"
+    "# largest power of 3 less than 10,000 -- failed\n",
+    "x = 1\n",
+    "while 3*x < 1e5:\n",
+    "    x *= 3\n",
+    "\n",
+    "x"
    ]
   },
   {
@@ -619,12 +635,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8109fe5c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1708306220.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[13], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    for (3*x < 1e5):\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "# largest power of 3 less than 10,000\n"
+    "# largest power of 3 less than 10,000\n",
+    "x = 1\n",
+    "for (3*x < 1e5):\n",
+    "    x *= 3\n",
+    "\n",
+    "x"
    ]
   },
   {
@@ -639,28 +669,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c636e0a9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Janeway\" in [\"Kirk\", \"Janeway\", \"Picard\"]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "cbac74df",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 >= 1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0e8db4f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Boolean or\n"
+    "# Boolean or\n",
+    "(2 >=1) or (1 == 0)"
    ]
   },
   {
@@ -673,24 +741,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a3abbcf1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 is positive.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "# ---"
+    "# ---\n",
+    "i =1\n",
+    "if i < 0:\n",
+    "    print(str(i) + \" is negative.\")\n",
+    "elif i == 0:\n",
+    "    print(str(i) + \" is 0.\")\n",
+    "else:\n",
+    "    print(str(i) + \" is positive.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0e488993",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "# print odd numbers 1-9\n",
-    "\n",
+    "for i in range(10):\n",
+    "    if i % 2 == 1:\n",
+    "        print(i)\n",
     "# ---"
    ]
   },
@@ -719,13 +816,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "91a012ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27 is a power of 3\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "# ---"
+    "# ---\n",
+    "possible_pow = 27\n",
+    "x = 1\n",
+    "\n",
+    "while x < 1e5:\n",
+    "    x *= 3\n",
+    "    if possible_pow == x:\n",
+    "        print(str(possible_pow) + \" is a power of 3\")\n",
+    "        break"
    ]
   },
   {
@@ -744,7 +857,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "# ---"
+    "# ---\n"
    ]
   },
   {
