--- a/Homework 1.ipynb
+++ b/Homework 1.ipynb
@@ -339,7 +339,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Please enter an integer. 6\n",
@@ -505,12 +505,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "79c61bda",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 5, 25], [1, 6, 36], [1, 7, 49]]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your solution\n"
+    "# your solution\n",
+    "X = [5, 6, 7]\n",
+    "k = 2\n",
+    "L = [[x ** i for i in range(k + 1)] for x in X]\n",
+    "L"
    ]
   },
   {
@@ -538,12 +553,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2df6e483",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 25, 625, 15625, 390625],\n",
+       " [1, 36, 1296, 46656, 1679616],\n",
+       " [1, 49, 2401, 117649, 5764801]]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your solution"
+    "# your solution\n",
+    "X = [5, 6, 7]\n",
+    "k = 8\n",
+    "L = [[x ** i for i in range(k + 1) if i % 2 == 0] for x in X]\n",
+    "L"
    ]
   },
   {
@@ -640,7 +672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
