--- a/Homework 1.ipynb
+++ b/Homework 1.ipynb
@@ -636,12 +636,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d557ebfb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your solution"
+    "# your solution\n",
+    "import random\n",
+    "\n",
+    "upper_bound = 3\n",
+    "lower_bound = -3\n",
+    "\n"
    ]
   },
   {
