--- a/Homework 1.ipynb
+++ b/Homework 1.ipynb
@@ -111,7 +111,7 @@
    ],
    "source": [
     "# your solution here\n",
-    "print(s.replace(\" : \", \"\\n\"))"
+    "print(s.replace(\" : \", \"\\n\")) "
    ]
   },
   {
@@ -151,7 +151,7 @@
    "source": [
     "# your solution here.\n",
     "for line in s.split(\"\\n\"):\n",
-    "    print(line.split(\" : \")[0].strip())"
+    "    print(line.split(\" : \")[0].strip()) # Added .strip() method to remove of the \\t after Tired and Wired"
    ]
   },
   {
@@ -189,7 +189,7 @@
    "source": [
     "# your code here\n",
     "for line in s.split(\"\\n\"):\n",
-    "    if len(line) < 80:\n",
+    "    if len(line) < 80: # Since we only want the shorter lines, just made sure the lengths of the strings were less than the longer one.\n",
     "        print(line)"
    ]
   },
@@ -278,18 +278,18 @@
     "def list_to_d(L):\n",
     "    D = {}\n",
     "    unique_L = []\n",
-    "    for x in L:\n",
+    "    for x in L: # First found unique elements to create keys\n",
     "        if x not in unique_L:\n",
     "            unique_L.append(x)\n",
-    "    for item in unique_L:\n",
+    "    for item in unique_L: # With the unique keys, found the counts\n",
     "        D.update({item : L.count(item)})\n",
     "    return D\n",
     "\n",
-    "string = [\"a\", \"a\", \"b\", \"c\"]\n",
+    "string = [\"a\", \"a\", \"b\", \"c\"] # Testing for string list\n",
     "D1 = list_to_d(string)\n",
     "print(D1)\n",
     "\n",
-    "integer = [1, 1, 2, 3, 5]\n",
+    "integer = [1, 1, 2, 3, 5] # Testing for integer list\n",
     "D2 = list_to_d(integer)\n",
     "print(D2)"
    ]
@@ -428,7 +428,7 @@
    ],
    "source": [
     "# your solution\n",
-    "[sum(range(1, n + 1)) for n in range(1, 11)]"
+    "[sum(range(1, n + 1)) for n in range(1, 11)] # Finds the sum of range from 1 to n as long as n can range from 1 to 10."
    ]
   },
   {
@@ -478,7 +478,7 @@
    "source": [
     "# your solution\n",
     "s = \"make it so, number one\"\n",
-    "L = [letter for letter in s if letter not in [\"a\", \"e\", \"i\", \"o\", \"u\", \" \"]]\n",
+    "L = [letter for letter in s if letter not in [\"a\", \"e\", \"i\", \"o\", \"u\", \" \"]] # Omits lower case vowels and \" \" in the new list\n",
     "L"
    ]
   },
