--- a/w02_03_tic-tac-toe.ipynb
+++ b/w02_03_tic-tac-toe.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "### Group Members and Roles\n",
     "\n",
-    "- Group Member 1 (Role)\n",
+    "- Group Member 1: Blair Lee (Player 2)\n",
     "- Group Member 2 (Role)\n",
     "- Group Member 3 (Role)\n",
     "\n",
